--- a/_config.yml
+++ b/_config.yml
@@ -6,4 +6,5 @@ sidebar_image: /images/cover.jpg
 # Build settings
 markdown: redcarpet
 highlighter: pygments
-baseurl: /going-doer/ # the subpath of your site, e.g. /blog/
+baseurl: "/going-doer" # the subpath of your site, e.g. /blog/
+url: "going-doer.github.io"
