--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: 'Strange Case' # Your Title
-tagline: 'Twisted tales to make you shudder' # A brief tagline for your site
+title: 'iaminju' # Your Title
+tagline: 'Korea University iOS Developer' # A brief tagline for your site
 sidebar_image: /images/cover.jpg
 
 # Build settings
