--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 'iaminju' # Your Title
 tagline: 'Korea University iOS Developer' # A brief tagline for your site
-sidebar_image: /images/cover.jpg
+sidebar_image: /images/cover.jpeg
 
 # Build settings
 markdown: redcarpet
